--- a/imgur-download/source/info.plist
+++ b/imgur-download/source/info.plist
@@ -176,11 +176,11 @@
 	<key>createdby</key>
 	<string>Nikita Voloboev</string>
 	<key>description</key>
-	<string></string>
+	<string>Download Imgur images and albums</string>
 	<key>disabled</key>
 	<false/>
 	<key>name</key>
-	<string>Imgur album download</string>
+	<string>Imgur download</string>
 	<key>objects</key>
 	<array>
 		<dict>
@@ -230,8 +230,8 @@ end alfred_script</string>
 				<integer>0</integer>
 				<key>script</key>
 				<string># THESE VARIABLES MUST BE SET. SEE THE ONEUPDATER README FOR AN EXPLANATION OF EACH.
-readonly remote_info_plist="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/imgur-album-download/source/info.plist"
-readonly workflow_url="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/imgur-album-download/Imgur%20album%20download.alfredworkflow"
+readonly remote_info_plist="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/imgur-download/source/info.plist"
+readonly workflow_url="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/imgur-download/Imgur%20download.alfredworkflow"
 readonly download_type='direct'
 readonly frequency_check='4'
 
