--- a/keyboard-control/source/info.plist
+++ b/keyboard-control/source/info.plist
@@ -12,6 +12,19 @@
 		<array>
 			<dict>
 				<key>destinationuid</key>
+				<string>4FE6E7B5-9FDE-43AF-A7F7-1B51BE8D8620</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>4FE6E7B5-9FDE-43AF-A7F7-1B51BE8D8620</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
 				<string>076502C9-678F-4E56-A384-A50D57926479</string>
 				<key>modifiers</key>
 				<integer>0</integer>
@@ -38,7 +51,7 @@
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>076502C9-678F-4E56-A384-A50D57926479</string>
+				<string>4FE6E7B5-9FDE-43AF-A7F7-1B51BE8D8620</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -207,6 +220,14 @@ fi</string>
 			<integer>2</integer>
 		</dict>
 		<dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.junction</string>
+			<key>uid</key>
+			<string>4FE6E7B5-9FDE-43AF-A7F7-1B51BE8D8620</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
 			<key>config</key>
 			<dict>
 				<key>argumenttype</key>
@@ -262,7 +283,7 @@ fi</string>
 			<key>note</key>
 			<string>OneUpdater</string>
 			<key>xpos</key>
-			<integer>400</integer>
+			<integer>440</integer>
 			<key>ypos</key>
 			<integer>80</integer>
 		</dict>
@@ -272,6 +293,13 @@ fi</string>
 			<integer>190</integer>
 			<key>ypos</key>
 			<integer>10</integer>
+		</dict>
+		<key>4FE6E7B5-9FDE-43AF-A7F7-1B51BE8D8620</key>
+		<dict>
+			<key>xpos</key>
+			<integer>360</integer>
+			<key>ypos</key>
+			<integer>110</integer>
 		</dict>
 		<key>7687AC5C-DE35-4C78-9E41-5FF75184D786</key>
 		<dict>
