--- a/month-numbers/source/info.plist
+++ b/month-numbers/source/info.plist
@@ -3,16 +3,16 @@
 <plist version="1.0">
 <dict>
 	<key>bundleid</key>
-	<string>com.nikivi.utilities</string>
+	<string>nikivi.month.numbers</string>
 	<key>category</key>
 	<string>Mine</string>
 	<key>connections</key>
 	<dict>
-		<key>4F203672-A680-4E38-9F00-8E2C0380DD82</key>
+		<key>3FD0DA9D-7238-4BCF-B96B-518BF96BC747</key>
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>C1520DB9-E42A-4CD8-AA28-1FACC292B62A</string>
+				<string>94077C4C-3B77-4DB0-98A0-BDBA0FA629BE</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -21,17 +21,41 @@
 				<false/>
 			</dict>
 		</array>
-		<key>C1520DB9-E42A-4CD8-AA28-1FACC292B62A</key>
-		<array/>
+		<key>57E7D8A0-DA41-457F-9FE1-154441AB917F</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>86EFED13-62E2-45A0-96FE-FDBB9E23A406</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>86EFED13-62E2-45A0-96FE-FDBB9E23A406</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>3FD0DA9D-7238-4BCF-B96B-518BF96BC747</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 	</dict>
 	<key>createdby</key>
-	<string>Nikita Voloboev</string>
+	<string>Nikita Voloboev &lt;nikita.voloboev@icloud.com&gt;</string>
 	<key>description</key>
-	<string>Run things</string>
+	<string>Because I always forget</string>
 	<key>disabled</key>
 	<false/>
 	<key>name</key>
-	<string>Useful utilities</string>
+	<string>Month numbers</string>
 	<key>objects</key>
 	<array>
 		<dict>
@@ -43,8 +67,8 @@
 				<integer>0</integer>
 				<key>script</key>
 				<string># THESE VARIABLES MUST BE SET. SEE THE ONEUPDATER README FOR AN EXPLANATION OF EACH.
-readonly remote_info_plist="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/utilities/source/info.plist"
-readonly workflow_url="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/utilities/Useful%utilities.alfredworkflow"
+readonly remote_info_plist="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/month-numbers/source/info.plist"
+readonly workflow_url="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/month-numbers/Month%20numbers.alfredworkflow"
 readonly download_type='direct'
 readonly frequency_check='4'
 
@@ -121,46 +145,66 @@ fi</string>
 			<key>type</key>
 			<string>alfred.workflow.action.script</string>
 			<key>uid</key>
-			<string>3DEA7699-F5F6-4211-BFFD-D1ECB002760F</string>
+			<string>94077C4C-3B77-4DB0-98A0-BDBA0FA629BE</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>action</key>
-				<integer>1</integer>
-				<key>argument</key>
-				<integer>1</integer>
-				<key>focusedappvariable</key>
-				<false/>
-				<key>focusedappvariablename</key>
-				<string></string>
-				<key>hotkey</key>
-				<integer>13</integer>
-				<key>hotmod</key>
-				<integer>1310720</integer>
-				<key>hotstring</key>
-				<string>W</string>
-				<key>leftcursor</key>
-				<true/>
-				<key>modsmode</key>
-				<integer>0</integer>
-				<key>relatedAppsMode</key>
-				<integer>0</integer>
+				<key>triggerid</key>
+				<string>months</string>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.trigger.hotkey</string>
+			<string>alfred.workflow.trigger.external</string>
 			<key>uid</key>
-			<string>4F203672-A680-4E38-9F00-8E2C0380DD82</string>
+			<string>57E7D8A0-DA41-457F-9FE1-154441AB917F</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>autopaste</key>
+				<false/>
+				<key>clipboardtext</key>
+				<string>{query}</string>
+				<key>transient</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.output.clipboard</string>
+			<key>uid</key>
+			<string>3FD0DA9D-7238-4BCF-B96B-518BF96BC747</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
 		<dict>
+			<key>config</key>
+			<dict>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
+				<key>argumenttype</key>
+				<integer>1</integer>
+				<key>fixedorder</key>
+				<false/>
+				<key>items</key>
+				<string>[{"title":"January (01)","arg":"01","subtitle":""},{"title":"February (02)","arg":"02","subtitle":""},{"title":"March (03)","arg":"03"},{"title":"April (04)","arg":"04"},{"title":"May (05)","arg":"05"},{"title":"June (06)","arg":"06"},{"title":"July (07)","arg":"07"},{"title":"August (08)","arg":"08"},{"title":"September (09)","arg":"09"},{"title":"October (10)","arg":"10"},{"title":"November (11)","arg":"11"},{"title":"December (12)","arg":"12"}]</string>
+				<key>keyword</key>
+				<string>months</string>
+				<key>runningsubtext</key>
+				<string></string>
+				<key>subtext</key>
+				<string>Press enter to copy the month number</string>
+				<key>title</key>
+				<string>Months numbers</string>
+				<key>withspace</key>
+				<true/>
+			</dict>
 			<key>type</key>
-			<string>alfred.workflow.utility.junction</string>
+			<string>alfred.workflow.input.listfilter</string>
 			<key>uid</key>
-			<string>C1520DB9-E42A-4CD8-AA28-1FACC292B62A</string>
+			<string>86EFED13-62E2-45A0-96FE-FDBB9E23A406</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
@@ -171,34 +215,41 @@ fi</string>
 Post any issues and feature requests you have there. 💜</string>
 	<key>uidata</key>
 	<dict>
-		<key>3DEA7699-F5F6-4211-BFFD-D1ECB002760F</key>
+		<key>3FD0DA9D-7238-4BCF-B96B-518BF96BC747</key>
+		<dict>
+			<key>xpos</key>
+			<integer>350</integer>
+			<key>ypos</key>
+			<integer>20</integer>
+		</dict>
+		<key>57E7D8A0-DA41-457F-9FE1-154441AB917F</key>
+		<dict>
+			<key>xpos</key>
+			<integer>10</integer>
+			<key>ypos</key>
+			<integer>20</integer>
+		</dict>
+		<key>86EFED13-62E2-45A0-96FE-FDBB9E23A406</key>
+		<dict>
+			<key>xpos</key>
+			<integer>170</integer>
+			<key>ypos</key>
+			<integer>20</integer>
+		</dict>
+		<key>94077C4C-3B77-4DB0-98A0-BDBA0FA629BE</key>
 		<dict>
 			<key>colorindex</key>
 			<integer>12</integer>
 			<key>note</key>
 			<string>OneUpdater</string>
 			<key>xpos</key>
-			<integer>270</integer>
+			<integer>540</integer>
 			<key>ypos</key>
 			<integer>20</integer>
-		</dict>
-		<key>4F203672-A680-4E38-9F00-8E2C0380DD82</key>
-		<dict>
-			<key>xpos</key>
-			<integer>30</integer>
-			<key>ypos</key>
-			<integer>20</integer>
-		</dict>
-		<key>C1520DB9-E42A-4CD8-AA28-1FACC292B62A</key>
-		<dict>
-			<key>xpos</key>
-			<integer>180</integer>
-			<key>ypos</key>
-			<integer>50</integer>
 		</dict>
 	</dict>
 	<key>version</key>
-	<string>1.0.0</string>
+	<string>1.0.2</string>
 	<key>webaddress</key>
 	<string>https://github.com/nikitavoloboev/small-workflows</string>
 </dict>
