--- a/karabiner-reload/source/info.plist
+++ b/karabiner-reload/source/info.plist
@@ -35,18 +35,7 @@
 			</dict>
 		</array>
 		<key>5905194B-A180-4688-842E-6D0ABF8B057D</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>6B55C53E-DD3D-4D82-AA0E-D8991CD6DD88</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
+		<array/>
 		<key>8E98779F-B168-4C7A-8932-995FA52E59A2</key>
 		<array>
 			<dict>
